# library-management-system

./: .gitignore  README.md  mypy.ini  pyproject.toml  screenshots.md
alembic/: env.py
alembic/versions/: 405ed3c18cfd_add_in_transactions_table.py  a03d63074bb0_add_in_book_publisher.py  d139105ae9ed_initial_commit.py
app/: __main__.py  constants.py  exception_handlers.py  exceptions.py  main.py  utils.py
app/api/: annotations.py
app/api/v1/: routes.py
app/api/v1/endpoints/: books.py  librarian.py  members.py  members_books.py  transactions.py
app/clients/: __init__.py  frappe.py
app/core/: config.py
app/crud/: __init__.py  base.py  book.py  member.py  members_books.py  transaction.py
app/db/: base.py  base_class.py  session.py
app/models/: book.py  member.py  members_books.py  transaction.py
app/schemas/: __init__.py  book.py  frappe.py  member.py  members_books.py  transaction.py
app/views/: books.py  borrowed_books.py  members.py  root.py  routes.py  transactions.py
scripts/: format.sh  lint.sh
src/library_management_system/: __init__.py
templates/: base.html  books.html  books_create.html  books_update.html  borrowed_books.html  import_books.html  index.html  issue_book.html  members.html  members_create.html  members_update.html  search_books.html  transactions.html
