[project]
name = "library-management-system"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Akhil Narang", email = "me@akhilnarang.dev" }
]
dependencies = [
    "fastapi~=0.97.0",
    "uvicorn~=0.22.0",
    "gunicorn~=20.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff~=0.0.272",
    "black~=23.3.0",
    "mypy~=1.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true
