[project]
name = "library-management-system"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Akhil Narang", email = "me@akhilnarang.dev" }
]
dependencies = [
    "fastapi~=0.97.0",
    "uvicorn~=0.22.0",
    "gunicorn~=20.1.0",
    "sqlalchemy~=2.0.16",
    "psycopg2-binary~=2.9.6",
    "alembic~=1.11.1",
    "pydantic[dotenv,email]~=1.10.9",
    "jinja2~=3.1.2",
    "python-multipart~=0.0.6",
    "httpx~=0.24.1",
    "rich~=13.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff~=0.0.272",
    "black~=23.3.0",
    "mypy~=1.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
select = ["E", "F", "I"]
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "__init__.py",
    ".mypy_cache",
    ".pytest_cache"
]

[tool.ruff.isort]
combine-as-imports = true

[tool.black]
line-length = 120
